# terp

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  coverage.bat
.github/actions-rs/: grcov.yml
.github/workflows/: build.yml  coverage.yml
doc/: .$lexis.drawio.bkp  README.md  automaton-string.drawio  inside-v0.1.md  lexis.drawio  terp.drawio  v0.1.drawio
doc/old/: README.md
src/: lib.rs  main.rs  test.rs
src/parser/: event.rs  mod.rs  path.rs  test.rs
src/parser/test/: context_free_grammer.rs  json.rs  mod.rs  or.rs  user_guide.rs  zero_repetition.rs
src/parser/test/data/: ok-matrix.json.txt
src/schema/: mod.rs  test.rs
src/schema/bytes/: mod.rs  test.rs
src/schema/chars/: mod.rs  test.rs
src/schema/json/: mod.rs  test.rs
src/schema/matcher/: mod.rs  test.rs
src/schema/text/: input.rs  mod.rs  test.rs  text_input.rs
terp-prof/: 2022-08-06.txt  Cargo.toml  README.md
terp-prof/src/: bench.rs  lib.rs  main.rs
terp-prof/src/nom/: mod.rs  test.rs
