[package]
name = "terp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.24"
encoding_rs = "0.8.31"
tokio = { version = "1", features = ["io-util"] }
async-trait = "0.1.56"
async-recursion = "1.0.0"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
itertools = "0.10"
