[package]
name = "terp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.24"
rayon = { version = "1.5", optional = true }

[dev-dependencies]
itertools = "0.10"

[features]
default = []
parallel = ["rayon"]
